# api/openapi.yaml
@@ -9,10 +9,10 @@ info:
     url: https://www.notion.so/Kkosunae-6721af7dab564435b1396f4d96143592
     email: thdnjs3596@gmail.com
 servers:
-  - url: http://localhost:8080
+  - url: http://ec2-3-38-213-35.ap-northeast-2.compute.amazonaws.com:8080/
     description: Local server
-  - url: https://kkosunae.herokuapp.com
-    description: Heroku server
+  - url: http://127.0.0.1:8080/
+    description: Local server
 
 paths:
   /health_check:
@@ -62,6 +62,52 @@ paths:
                                 jwt:
                                     type: string
                                     example: "123456789"
+                                user_id:
+                                    type: int
+                                    example: 1
+            '401':
+                description: "accessToken 이 유효하지 않을 때"
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                error:
+                                    type: string
+                                    example: "유효하지 않은 토큰입니다."
+  /user/google:
+    post:
+        tags: 
+            - user
+        summary: 구글 로그인, 회원가입
+        description: 파라미터가 accessToken 인 post api으로 jwt 토큰을 반환한다.
+        requestBody:
+            required: true
+            content:
+                application/json:
+                    schema:
+                        type: object
+                        properties:
+                            accessToken:
+                                type: string
+                                example: "accessToken"
+        responses:
+            '200':
+                description: 성공
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                type:
+                                    type: string
+                                    example: "login or register"
+                                jwt:
+                                    type: string
+                                    example: "123456789"
+                                user_id:
+                                    type: int
+                                    example: 1
             '401':
                 description: "accessToken 이 유효하지 않을 때"
                 content:
@@ -73,4 +119,4 @@ paths:
                                     type: string
                                     example: "유효하지 않은 토큰입니다."
             
-                                    
+                                
