# src/controllers/user.js
@@ -2,7 +2,9 @@
 
 
 import express from 'express';
-import {signInKakao} from '../services/user.js';
+import {signInKakao, signInGoogle} from '../services/user.js';
+import config from 'config';
+import axios from 'axios';
 
 const loginKakao = async (req, res) => {
   try {
@@ -22,6 +24,25 @@ const loginKakao = async (req, res) => {
   }
 };
 
+const loginGoogle = async (req, res) => {
+  try {
+    // post 로 전달받은 바디에서 토큰 추출
+    const accessToken = req.body.accessToken;
+
+    const result = await signInGoogle(accessToken);
+
+    return res.status(200).json(result);
+  } catch (error) {
+    // Handle error
+    if (error.message === '유효하지 않은 토큰입니다.') {
+      return res.status(401).json({error: '유효하지 않은 토큰입니다.'});
+    } else {
+      return res.status(500).json({error: 'Internal Server Error'});
+    }
+  }
+};
+
 export default {
   loginKakao,
+  loginGoogle,
 };
