# src/routes/user.js
@@ -6,5 +6,6 @@ import ctrl from '../controllers/user.js';
 const router = express.Router();
 
 router.post('/kakao', ctrl.loginKakao);
+router.post('/google', ctrl.loginGoogle);
 
 export default router;
